examples/errors/redecleration.alan
main(): proc
x: int;
x: int;
{
}
